# llms-txt-server

./: .gitignore  README.md  TODOs.md  pyproject.toml
design/: server-design.md
src/llms_txt_server/: __init__.py  server.py
tests/: test_server.py
