[project]
name = "llms-txt-server"
version = "0.1.0"
description = "A Model Context Protocol server for fetching llms.txt from websites for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
llms-txt-server = "llms_txt_server:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
